--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev-fa-svg": "NODE_ENV=development FONT_AWESOME='svg' webpack --mode development",
     "build-fa-css": "NODE_ENV=production FONT_AWESOME='css' webpack --mode production",
     "build-fa-svg": "NODE_ENV=production FONT_AWESOME='svg' webpack --mode production",
-    "build-web": "NODE_ENV='production-web-css' FONT_AWESOME='css' webpack --mode production"
+    "build-web": "NODE_ENV='production-web-css' FONT_AWESOME='css' webpack --mode production",
+    "sample-convert": "node sample-convert.js"
   },
   "repository": {
     "type": "git",
@@ -31,16 +32,20 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
+    "asciidoctor-reveal.js": "^2.0.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "google-fonts-plugin": "^5.0.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
+    "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "path": "^0.12.7",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
@@ -56,6 +61,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-regular-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
+    "asciidoctor": "^2.0.3",
     "highlight.js": "^9.16.2",
     "mathjax-full": "^3.0.0",
     "reveal.js": "^3.7.0",
